Return an array list on all paths.